Aggiunta grandezza minima e massima al file

--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -718,3 +718,5 @@ components:
       description: Represents an image.
       type: string
       format: binary   
+      minLength: 0
+      maxLength: 8388608
